--- a/force-app/main/default/classes/abcd.cls
+++ b/force-app/main/default/classes/abcd.cls
@@ -1,5 +1,6 @@
 public with sharing class abcd {
     public abcd() {
-        System.debug('hello world');
+        System.debug('neha gahlot');
+        System.debug('techila');
     }
 }
