--- a/force-app/main/default/classes/abcd.cls
+++ b/force-app/main/default/classes/abcd.cls
@@ -3,5 +3,6 @@ public with sharing class abcd {
         System.debug('neha gahlot');
         System.debug('techila global');
         System.debug('Mhhy new changes');
+        System.debug('hello world');
     }
 }
