--- a/force-app/main/default/classes/abcd.cls
+++ b/force-app/main/default/classes/abcd.cls
@@ -1,8 +1,6 @@
 public with sharing class abcd {
     public abcd() {
-        System.debug('neha gahlot');
-        System.debug('techila global');
-        System.debug('Mhhy new changes');
-        System.debug('hello world');
+        System.debug('neha gahlothee');
+        
     }
 }
